--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tech.grasshopper</groupId>
 	<artifactId>cucumber-rest-assured-junit-report</artifactId>
-	<version>1.1.1</version>
+	<version>2.0.0</version>
 
 	<properties>
-		<aspectj.version>1.9.6</aspectj.version>
 		<allure.results.directory>
 			${project.build.directory}/allure-results
 		</allure.results.directory>
@@ -45,10 +44,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- <dependency> <groupId>io.qameta.allure</groupId> <artifactId>allure-rest-assured</artifactId> 
+			<version>2.14.0</version> <scope>test</scope> </dependency> -->
 		<dependency>
-			<groupId>io.qameta.allure</groupId>
-			<artifactId>allure-rest-assured</artifactId>
-			<version>2.14.0</version>
+			<groupId>tech.grasshopper</groupId>
+			<artifactId>extent-allure-rest-assured</artifactId>
+			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -112,7 +113,7 @@
 			<plugin>
 				<groupId>tech.grasshopper</groupId>
 				<artifactId>cucumber-rest-assured-extent-report-plugin</artifactId>
-				<version>1.1.1</version>
+				<version>2.0.0</version>
 				<executions>
 					<execution>
 						<id>report</id>
