--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tech.grasshopper</groupId>
 	<artifactId>cucumber-rest-assured-junit-report</artifactId>
-	<version>2.3.1</version>
+	<version>2.4.0</version>
 
 	<properties>
 		<allure.results.directory>
@@ -99,7 +99,7 @@
 			<plugin>
 				<groupId>tech.grasshopper</groupId>
 				<artifactId>cucumber-rest-assured-extent-report-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>2.4.0</version>
 				<executions>
 					<execution>
 						<id>report</id>
@@ -126,6 +126,8 @@
 					</systemInfoFilePath>
 					<sparkViewOrder>DASHBOARD,TEST,EXCEPTION,CATEGORY,AUTHOR,DEVICE
 					</sparkViewOrder>
+					<!-- <requestHeadersBlacklist>Content-Type</requestHeadersBlacklist> 
+						<responseHeadersBlacklist>Content-Length,Content-Type</responseHeadersBlacklist> -->
 				</configuration>
 			</plugin>
 		</plugins>
